# backend/models/character.js
@@ -2,11 +2,11 @@
 const mongoose = require('mongoose');
 
 const characterSchema = new mongoose.Schema({
-  name: String,
-  age: Number,
-  occupation: String,
-  personality: [String],
-  source: String,
+  name: { type: String, required: true },
+  age: { type: Number, required: true, min: 0 },
+  occupation: { type: String, required: true },
+  personality: { type: [String], required: true },
+  source: { type: String, required: true },
 });
 
 module.exports = mongoose.model('Character', characterSchema);
